# SC-2023-2024

./: README.md  exercice.md
exemple-sc/: README.md  pyproject.toml
exemple-sc/exemple_sc/: __init__.py  __main__.py  lib_taches.py
exemple-sc/tests/: test_serialisation.py  test_taches.py
projets/: README.md  affectation.py
projets/01/: README.md
projets/02/: README.md
projets/03/: README.md
projets/04/: README.md
projets/05/: README.md
projets/06/: README.md
projets/07/: README.md
projets/08/: README.md
projets/09/: README.md
projets/10/: README.md
projets/11/: README.md
projets/12/: README.md
seance01/: 01.ipynb  README.md
seance02/: 02.ipynb  README.md  lib_traversee.py  test_traversee.py
seance03/: README.md  lib_graphe.py  test_graphe.py
seance04/: README.md  lib_data.py  test_data.py
seance05/: README.md  experimentation.ipynb  lib_data.py  test_data.py
seance06/: README.md  lib_data.py  test_data.py
seance07/: README.md  lib_graphe.py  test_graphe.py
seance08/: README.md  lib_graphe.py  test_graphe.py
seance09/: README.md  lib_graphe.py  lib_resolution.py  test_graphe.py  test_resolution.py
seance11/: README.md  lib_resolution.py  test_resolution.py
seance12/: README.md  lib_taches.py  test_taches.py
seance13/: README.md  lib_taches.py  test_taches.py
